<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.GifFragment"

    >

    <ImageView
        android:id="@+id/img_single_gif"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_margin="35dp"
        android:src="@color/mediumGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ios"
        android:text="@string/username"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/giftitle"
        app:layout_constraintTop_toBottomOf="@+id/giftitle" />

    <TextView
        android:id="@+id/giftitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ios"
        android:text="@string/title"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/img_single_gif"
        app:layout_constraintTop_toBottomOf="@+id/img_single_gif" />

    <TextView

        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/ios"
        android:text="@string/username"
        android:textColor="@color/theme_blue"
        app:layout_constraintBottom_toBottomOf="@+id/username"
        app:layout_constraintStart_toEndOf="@+id/username"
        app:layout_constraintTop_toTopOf="@+id/username" />

    <TextView
        android:id="@+id/tv_gif_title"
        android:ellipsize="end"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/ios"
        android:text="@string/username"
        android:textColor="@color/theme_blue"
        app:layout_constraintBottom_toBottomOf="@+id/giftitle"
        app:layout_constraintEnd_toEndOf="@+id/img_single_gif"
        app:layout_constraintStart_toEndOf="@+id/giftitle"
        app:layout_constraintTop_toTopOf="@+id/giftitle" />

    <TextView
        android:id="@+id/dateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ios"
        android:text="@string/import_date"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/tv_import_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/ios"
        android:text="@string/username"
        android:textColor="@color/theme_blue"
        app:layout_constraintBottom_toBottomOf="@+id/dateTime"
        app:layout_constraintStart_toEndOf="@+id/dateTime"
        app:layout_constraintTop_toTopOf="@+id/dateTime" />

    <TextView
        android:id="@+id/tv_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/ios"
        android:text="@string/username"
        android:textColor="@color/theme_blue"
        app:layout_constraintBottom_toBottomOf="@+id/source"
        app:layout_constraintStart_toEndOf="@+id/source"
        app:layout_constraintTop_toTopOf="@+id/source" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/ios"
        android:text="@string/username"
        android:textColor="@color/theme_blue"
        app:layout_constraintBottom_toBottomOf="@+id/rating"
        app:layout_constraintStart_toEndOf="@+id/rating"
        app:layout_constraintTop_toTopOf="@+id/rating" />

    <TextView
        android:id="@+id/source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ios"
        android:text="@string/source"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/dateTime"
        app:layout_constraintTop_toBottomOf="@+id/dateTime" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ios"
        android:text="@string/rating"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/source"
        app:layout_constraintTop_toBottomOf="@+id/source" />


</androidx.constraintlayout.widget.ConstraintLayout>